--- a/configure.in
+++ b/configure.in
@@ -1569,10 +1569,20 @@ if test "x$use_vaapi" != "xno"; then
     if test "x$use_vaapi" != "xno"; then
       if test "$use_gles" = "yes"; then
         dnl XXX: necessary for texture-from-pixmap
-        PKG_CHECK_MODULES([LIBVA_X11], [libva-x11], [
-          INCLUDES="$INCLUDES $LIBVA_X11_CFLAGS"
-          LIBS="$LIBS $LIBVA_X11_LIBS"
-          has_va_x11="yes"], [use_vaapi="no"])
+        if test "$use_x11" = "yes"; then
+          PKG_CHECK_MODULES([LIBVA_X11], [libva-x11], [
+            INCLUDES="$INCLUDES $LIBVA_X11_CFLAGS"
+            LIBS="$LIBS $LIBVA_X11_LIBS"
+            has_va_x11="yes"], [use_vaapi="no"])
+        fi
+
+        dnl Check for VA/DRM API, i.e. vaGetDisplayDRM() for EGL/KMS
+        if test "$use_kms" = "yes"; then
+          PKG_CHECK_MODULES([LIBVA_DRM], [libva-drm], [
+            INCLUDES="$INCLUDES $LIBVA_DRM_CFLAGS"
+            LIBS="$LIBS $LIBVA_DRM_LIBS"
+            has_va_drm="yes"], [use_vaapi="no"])
+        fi
 
         dnl Check for new VA/EGL API, i.e. vaGetSurfaceBufferEGL()
         PKG_CHECK_MODULES([LIBVA_EGL], [libva-egl], [has_va_egl="yes"], [:])
@@ -1623,6 +1633,9 @@ if test "x$use_vaapi" != "xno"; then
       fi
       if test "$has_va_glx" = "yes"; then
         AC_DEFINE([HAVE_VA_GLX], [1], [Defined to 1 if VA/GLX API is available])
+      fi
+      if test "$has_va_drm" = "yes"; then
+        AC_DEFINE([HAVE_VA_DRM], [1], [Defined to 1 if VA/DRM API is available])
       fi
       if test "$has_va_egl" = "yes"; then
         AC_DEFINE([HAVE_VA_EGL], [1], [Defined to 1 if VA/EGL API is available])
